--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div class="qrCode">
-      <img src="./images/image-qr-code.png" alt="qr code" width="90%">
+    <section class="qrCode">
+      <figure>
+        <img src="./images/image-qr-code.png" alt="qr code">
+      </figure>
       <p>Improve your front-end skills by building projects</p> 
       <span>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</span>
-    </div>
+    </section>
     
-    
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Tharcisio</a>.
-    </div>
+      <footer class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="#">Tharcisio</a>.
+      </footer>
   </body>
 </html>
