fixing tags and img

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <section class="qrCode">
+    <section>
       <figure>
         <img src="./images/image-qr-code.png" alt="qr code">
       </figure>
