--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
       <footer class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">Tharcisio</a>.
+        Coded by <a href="https://github.com/SkinnV1">Tharcisio</a>.
       </footer>
   </body>
 </html>
